--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <a href="#certifications" style="text-decoration: none;">My&nbsp;Certifications</a>
         <a href="#personal-projects" style="text-decoration: none;">Personal&nbsp;Projects</a>
         <a href="#projects" style="text-decoration: none;">Web&nbsp;Dev</a>
-        <a href="#autocad" style="text-decoration: none;">Other&nbsp;Work</a>
-        <a href="#contact-section" style="text-decoration: none;">Contact Info</a>
+        <a href="#autocad" style="text-decoration: none;">QA&nbsp;and&nbsp;Other&nbsp;Work</a>
+        <a href="#contact-section" style="text-decoration: none;">Contact&nbsp;Info</a>
       </nav>
     </nav>
     <!--/. end Navbar-->
@@ -893,4 +893,5 @@
   </script>
 </body>
 </html>
+
 
