--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
 
     <!--QA Positive Negative TC example-->
       <div class="single-img cards project-cards border-aqua">
-        <img alt="Polyline example 1" class="project-image img-thumbnail single-img" src="img/PositiveNegativeTC.PNG"
+        <img alt="Positive / Negative TC example" class="project-image img-thumbnail single-img" src="img/PositiveNegativeTC.PNG"
           style="height:150px;">
         <a href="img/PositiveNegativeTC.PNG" target="_blank">
           <p class="card-btn">
@@ -893,5 +893,6 @@
   </script>
 </body>
 </html>
+
 
 
