--- a/index.html
+++ b/index.html
@@ -619,9 +619,9 @@
 
     <!--QA Positive Negative TC example-->
       <div class="single-img cards project-cards border-aqua">
-        <img alt="Positive / Negative TC example" class="project-image img-thumbnail single-img" src="img/PositiveNegativeTC.PNG"
+        <img alt="Positive / Negative TC example" class="project-image img-thumbnail single-img" src="img/PositiveNegativeTC.png"
           style="height:150px;">
-        <a href="img/PositiveNegativeTC.PNG" target="_blank">
+        <a href="img/PositiveNegativeTC.png" target="_blank">
           <p class="card-btn">
             <span class="btn btn-success btn-sm zoom">View</span>
           </p>
@@ -893,6 +893,7 @@
   </script>
 </body>
 </html>
+
 
 
 
