--- a/index.html
+++ b/index.html
@@ -612,9 +612,9 @@
   </section>
   <br /><br /><br />
   <!--End of web Development work --------------------------------------------------------------------------->
-  <!--Start of QA | Archibus | CAD | Other work ---------------------------------------------------------------------------->
+  <!--Start of QA | Reports | CAD | Other work ---------------------------------------------------------------------------->
   <section class="wrapper">
-    <h1 id="autocad" class="myGalleries">QA | Archibus | CAD Gallery</h1>
+    <h1 id="autocad" class="myGalleries">QA | Reports | CAD Gallery</h1>
     <div class="img-area">
 
 
@@ -921,6 +921,7 @@
   </script>
 </body>
 </html>
+
 
 
 
