--- a/index.html
+++ b/index.html
@@ -656,6 +656,20 @@
         </a>
         <p class="color-black">Positive / Negative Test Case example</p>
       </div>
+
+
+      <!--qTest example-->
+      <div class="single-img cards project-cards border-aqua">
+        <img alt="qTest example" class="project-image img-thumbnail single-img" src="img/qTest.png"
+          style="height:150px;">
+        <a href="img/qTest.png" target="_blank">
+          <p class="card-btn">
+            <span class="btn btn-success btn-sm zoom">View</span>
+          </p>
+        </a>
+        <p class="color-black">qTest example</p>
+      </div>
+
       
       <!--Archibus 3 Page Edit Form w/ Popup-->
       <div class="single-img cards project-cards border-aqua">
@@ -921,6 +935,7 @@
   </script>
 </body>
 </html>
+
 
 
 
