--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
             <span class="btn btn-success btn-sm zoom">View</span>
           </p>
         </a>
-        <p class="color-black">Bug Report Writing example</p>
+        <p class="color-black">Bug Report example</p>
       </div>
 
       
@@ -935,6 +935,7 @@
   </script>
 </body>
 </html>
+
 
 
 
