--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
             <span class="btn btn-success btn-sm zoom">View</span>
           </p>
         </a>
-        <p class="color-black">SFMC Email Test Case example</p>
+        <p class="color-black">SFMC Email Test Case example - Robert Half</p>
       </div>
 
 
@@ -643,7 +643,7 @@
             <span class="btn btn-success btn-sm zoom">View</span>
           </p>
         </a>
-        <p class="color-black">SFMC Journey Test Case example</p>
+        <p class="color-black">SFMC Journey Test Case example - Robert Half</p>
       </div>
 
 
@@ -662,7 +662,7 @@
             <span class="btn btn-success btn-sm zoom">View</span>
           </p>
         </a>
-        <p class="color-black">SFMC Automation Test Case example</p>
+        <p class="color-black">SFMC Automation Test Case example - Robert Half</p>
       </div>
 
 
@@ -725,7 +725,7 @@
             <span class="btn btn-success btn-sm zoom">View</span>
           </p>
         </a>
-        <p class="color-black">qTest example</p>
+        <p class="color-black">qTest example - Robert Half</p>
       </div>
 
       
@@ -738,7 +738,7 @@
             <span class="btn btn-success btn-sm zoom">View</span>
           </p>
         </a>
-        <p class="color-black">Archibus 3 Page Edit Form w/ Popup</p>
+        <p class="color-black">Archibus 3 Page Edit Form w/ Popup - RSC</p>
       </div>
       <!--Archibus Interactive 2 Page View-->
       <div class="single-img cards project-cards border-aqua">
@@ -749,7 +749,7 @@
             <span class="btn btn-success btn-sm zoom">View</span>
           </p>
         </a>
-        <p class="color-black">Archibus Interactive 2 Page View</p>
+        <p class="color-black">Archibus Interactive 2 Page View - RSC</p>
       </div>
       <!--Autocad 25k with cleanup-->
       <div class="single-img cards project-cards border-aqua">
@@ -760,7 +760,7 @@
             <span class="btn btn-success btn-sm zoom">View</span>
           </p>
         </a>
-        <p class="color-black">CAD design and polylining 25,000 sq ft</p>
+        <p class="color-black">CAD design and polylining 25,000 sq ft - RSC</p>
       </div>
       <!--Autocad 25k with cleanup-->
       <!-- <div class="single-img cards project-cards">
@@ -782,7 +782,7 @@
             <span class="btn btn-success btn-sm zoom">View</span>
           </p>
         </a>
-        <p class="color-black">CAD design and polylining 25,000 sq ft</p>
+        <p class="color-black">CAD design and polylining 25,000 sq ft - RSC</p>
       </div>
       <!--Autocad 25k with category-->
       <div class="single-img cards project-cards border-aqua">
@@ -793,7 +793,7 @@
             <span class="btn btn-success btn-sm zoom">View</span>
           </p>
         </a>
-        <p class="color-black">AutoCAD Room Type & Category assignments</p>
+        <p class="color-black">AutoCAD Room Type & Category assignments - RSC</p>
       </div>
       <!--Autocad 25k with category-->
       <div class="single-img cards project-cards border-aqua">
@@ -804,7 +804,7 @@
             <span class="btn btn-success btn-sm zoom">View</span>
           </p>
         </a>
-        <p class="color-black">AutoCAD Room Type & Category assignments</p>
+        <p class="color-black">AutoCAD Room Type & Category assignments - RSC</p>
       </div>
       <!--Autocad 25k with category-->
       <!-- <div class="single-img cards project-cards">
@@ -826,7 +826,7 @@
             <span class="btn btn-success btn-sm zoom">View</span>
           </p>
         </a>
-        <p class="color-black">Revit example home model</p>
+        <p class="color-black">Revit example home model - RSC</p>
       </div>
       <!--revit home model 2-->
       <div class="single-img cards project-cards border-aqua">
@@ -837,7 +837,7 @@
             <span class="btn btn-success btn-sm zoom">View</span>
           </p>
         </a>
-        <p class="color-black">Revit example home model</p>
+        <p class="color-black">Revit example home model - RSC</p>
       </div>
       <div class="single-img cards project-cards border-aqua">
         <img alt="Excel Direct Connect Report" class="project-image img-thumbnail  single-img" src="img/exceldc.PNG"
@@ -877,7 +877,7 @@
           </span>
         </p>
       </a>
-      <p class="color-black">Crystal Report 1</p>
+      <p class="color-black">Crystal Report 1 - RSC</p>
     </div>
     <!-- end crystal report 1-->
     <!--crystal report 2-->
@@ -897,7 +897,7 @@
           </span>
         </p>
       </a>
-      <p class="color-black">Crystal Report 2</p>
+      <p class="color-black">Crystal Report 2 - RSC</p>
     </div>
     <!-- end crystal report 2-->
     <!--crystal report 3-->
@@ -917,7 +917,7 @@
           </span>
         </p>
       </a>
-      <p class="color-black">Crystal Report 3</p>
+      <p class="color-black">Crystal Report 3 - RSC</p>
     </div>
     <!-- end crystal report 3-->
     </div>
@@ -993,15 +993,3 @@
   </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
