--- a/index.html
+++ b/index.html
@@ -612,9 +612,9 @@
   </section>
   <br /><br /><br />
   <!--End of web Development work --------------------------------------------------------------------------->
-  <!--Start of QA | Dashboards | Reports | CAD | Other work ---------------------------------------------------------------------------->
+  <!--Start of QA examples | Reports | CAD | Other work ---------------------------------------------------------------------------->
   <section class="wrapper">
-    <h1 id="autocad" class="myGalleries">QA | Dashboards | Reports | CAD Gallery</h1>
+    <h1 id="autocad" class="myGalleries">QA Examples | Reports | CAD Gallery | Other Work</h1>
     <div class="img-area">
       <!--SFMC Email Test Case example-->
       <div class="single-img cards project-cards border-aqua">
@@ -957,4 +957,5 @@
   </script>
 </body>
 </html>
+
 
