--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@
       </div>
 
     -->
-    <!--Crystal Report 1-->
+    <!--Crystal Report-->
     <div class="single-img cards project-cards">
       <img alt="crystal report" class="project-image img-thumbnail single-img" src="img/crystal_report.PNG"
         style="height:150px; width: 260px;">
@@ -844,9 +844,9 @@
           </span>
         </p>
       </a>
-      <p class="color-black">Crystal Report 1 - RSC</p>
+      <p class="color-black">Crystal Report - RSC</p>
     </div>
-    <!-- end crystal report 1-->
+    <!-- end crystal report-->
 
       
     <!--crystal report 2-->
@@ -968,6 +968,7 @@
   </script>
 </body>
 </html>
+
 
 
 
