Update index - copy.html

--- a/index - copy.html
+++ b/index - copy.html
@@ -827,7 +827,7 @@
       </div>
 
     -->
-    <!--Crystal Report 1-->
+    <!--Crystal Report-->
     <div class="single-img cards project-cards">
       <img alt="crystal report" class="project-image img-thumbnail single-img" src="img/crystal_report.PNG"
         style="height:150px; width: 260px;">
@@ -844,57 +844,9 @@
           </span>
         </p>
       </a>
-      <p class="color-black">Crystal Report 1 - RSC</p>
+      <p class="color-black">Crystal Report - RSC</p>
     </div>
-    <!-- end crystal report 1-->
-
-      
-    <!--crystal report 2-->
-  <!--
-    <div class="single-img cards project-cards">
-      <img alt="crystal report" class="project-image img-thumbnail single-img" src="img/crystal_report2.PNG"
-        style="height:150px; width: 260px;">
-      <a href="img/crystal_report2.PNG" target="_blank">
-        <p class="card-btn">
-          <span class="btn btn-success btn-sm zoom">View</span>
-        </p>
-      </a>
-      <a href="https://github.com/BayAreaITGuy/portfolio/tree/master/img/crystalReportImg" target="_blank">
-        <p class="card-btn">
-          <span class="btn btn-success btn-sm zoom">
-            <i class="fa fa-git" aria-hidden="true"></i>
-            <i class="fa fa-code" aria-hidden="true"></i>
-          </span>
-        </p>
-      </a>
-      <p class="color-black">Crystal Report 2 - RSC</p>
-    </div>
-      -->
-      
-    <!-- end crystal report 2-->
-    <!--crystal report 3-->
-  <!--
-    <div class="single-img cards project-cards">
-      <img alt="crystal report" class="project-image img-thumbnail single-img" src="img/crystal_Report4.PNG"
-        style="height:150px; width: 260px;">
-      <a href="img/crystal_Report4.PNG" target="_blank">
-        <p class="card-btn">
-          <span class="btn btn-success btn-sm zoom">View</span>
-        </p>
-      </a>
-      <a href="https://github.com/BayAreaITGuy/portfolio/tree/master/img/crystalReportImg" target="_blank">
-        <p class="card-btn">
-          <span class="btn btn-success btn-sm zoom">
-            <i class="fa fa-git" aria-hidden="true"></i>
-            <i class="fa fa-code" aria-hidden="true"></i>
-          </span>
-        </p>
-      </a>
-      <p class="color-black">Crystal Report 3 - RSC</p>
-    </div>
-
-      -->
-    <!-- end crystal report 3-->
+    <!-- end crystal report-->
     </div>
     <br /><br /><br /><br /><br /><br />
   </section>
@@ -968,5 +920,6 @@
   </script>
 </body>
 </html>
+
 
 
